--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,4 @@
 <div class="publications">
   <h2>Publications</h2>
-  {% bibliography -f papers -q @*[selected=true]* %}
+  {% bibliography -f papers -q %}
 </div>
